--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3694,3 +3694,18 @@ body.layout-3 .main-wrapper {
 -moz-box-shadow: 4px 3px 4px -1px rgba(214,214,255,1);
 box-shadow: 4px 3px 4px -1px rgba(214,214,255,1);
 }
+.img-circle{
+  border-radius: 40%;
+  max-width: 60px;
+  max-height: 60px;
+}
+.inicio-img{
+  height: 29px;
+  width: 30px;
+  border-radius: 50%;
+}
+
+.img-profile{
+  min-width: 165px;
+  min-height: 165px;
+}
